--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,25 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
 
+@font-face {
+  font-family: "OpenSansBold";
+  src: url(/fonts/Open_Sans/OpenSans-Bold.ttf); }
+
+@font-face {
+  font-family: "OpenSansThin";
+  src: url(/fonts/Open_Sans/OpenSans-Light.ttf); }
+
+@font-face {
+  font-family: "OpenSansSemiBold";
+  src: url(/fonts/Open_Sans/OpenSans-SemiBold.ttf); }
+
+@font-face {
+  font-family: "OpenSans";
+  src: url(/fonts/Open_Sans/OpenSans-Regular.ttf); }
+
 body {
+  font-family: "OpenSans";
+  font-size: 16px;
   line-height: 1; }
 
 ol, ul {
@@ -42,3 +60,372 @@ table {
 
 .filler {
   flex: 1 1 auto; }
+
+.map-block, .map-frame {
+  width: 100%; }
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  align-items: center;
+  margin-top: 90px; }
+
+header {
+  background-color: #fff;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 90px;
+  display: flex;
+  justify-content: center; }
+
+.header {
+  height: 90px;
+  width: 1220px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .header .header-navigation {
+    margin-bottom: 2px;
+    font-size: 14px;
+    display: flex; }
+    .header .header-navigation .header-navigation-item {
+      line-height: 20px;
+      padding: 10px 20px;
+      border-radius: 50px; }
+      .header .header-navigation .header-navigation-item a {
+        text-decoration: none; }
+  .header img {
+    width: 80px;
+    height: 80px; }
+
+.header-navigation-item a {
+  color: #676767; }
+
+.active {
+  background-color: #3C6EB9; }
+  .active a {
+    color: #fff; }
+
+.registration {
+  display: flex;
+  width: 100%;
+  background-color: #F7F7F7; }
+
+.registration-container {
+  width: 1220px;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 40px;
+  height: 630px;
+  justify-content: space-between; }
+
+.courses {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 610px;
+  margin-bottom: 120px; }
+  .courses .courses-title {
+    font-family: "OpenSansSemiBold";
+    font-size: 35px; }
+  .courses .courses-text {
+    color: #787878; }
+    .courses .courses-text p {
+      max-width: 510px;
+      text-align: center;
+      line-height: 40px;
+      margin-top: 30px; }
+
+.registration-form::placeholder {
+  color: #787878; }
+
+.registration-form {
+  margin-top: 19px;
+  margin-left: 20px; }
+  .registration-form form {
+    display: flex;
+    flex-direction: column;
+    width: 590px;
+    height: 670px;
+    font-size: 14px; }
+    .registration-form form .input {
+      height: 50px;
+      line-height: 50px;
+      margin-bottom: 10px; }
+    .registration-form form label {
+      line-height: 18px;
+      font-family: "OpenSansThin";
+      font-weight: 100;
+      margin-bottom: 5px; }
+    .registration-form form img {
+      height: 8px;
+      width: 8px; }
+    .registration-form form h3 {
+      font-size: 22px;
+      font-weight: 600;
+      margin-bottom: 20px; }
+    .registration-form form button {
+      background-color: #3C6EB9;
+      color: #fff;
+      text-transform: uppercase;
+      height: 50px;
+      width: 370px;
+      border: none;
+      border-radius: 100px;
+      align-self: center;
+      margin-bottom: 30px;
+      margin-top: 30px; }
+    .registration-form form .form-terms {
+      color: #787878;
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+      align-items: center;
+      height: 20px;
+      line-height: 20px; }
+      .registration-form form .form-terms label {
+        margin: 0 5px; }
+      .registration-form form .form-terms input {
+        width: 10px;
+        height: 10px;
+        margin: 0; }
+      .registration-form form .form-terms a {
+        color: #6898da;
+        text-decoration: none; }
+
+.web-dev-title {
+  margin-top: 72px;
+  margin-bottom: 35px;
+  font-size: 35px;
+  text-align: center;
+  letter-spacing: 0.0001em; }
+
+.course-web-deb {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.course-slider-item {
+  height: 350px;
+  width: 350px;
+  margin: 0 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .course-slider-item img {
+    margin-bottom: 22px; }
+  .course-slider-item h3 {
+    text-align: center;
+    font-size: 23px;
+    padding-bottom: 22px;
+    border-bottom: solid 1px #3498db;
+    letter-spacing: 0.017em; }
+  .course-slider-item p {
+    font-family: "OpenSansThin";
+    margin-top: 27px;
+    line-height: 26px;
+    text-align: center;
+    color: #787878;
+    letter-spacing: 0.005em; }
+
+.course-slider-container {
+  display: flex;
+  width: 1220px;
+  justify-content: center; }
+
+.statistics {
+  margin-top: 70px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  background-color: #3498db;
+  height: 305px;
+  width: 100%; }
+
+.statistics-container {
+  width: 1220px;
+  margin: 0 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .statistics-container img {
+    height: 60px;
+    width: 80px; }
+
+.statistics-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  height: 140px;
+  width: 300px; }
+  .statistics-item .statistics-numbers {
+    font-size: 27px;
+    margin-bottom: 15px; }
+  .statistics-item .statistics-title {
+    letter-spacing: 0.005em; }
+
+.students-feedbacks {
+  height: 530px; }
+  .students-feedbacks h2 {
+    text-align: center;
+    margin-top: 78px;
+    font-size: 34px;
+    letter-spacing: 0.012em; }
+
+.feedbacks-slider {
+  width: 1220px;
+  margin: 0 auto; }
+
+.feedback-text {
+  width: 900px;
+  font-size: 21px;
+  margin-top: 20px;
+  line-height: 38px;
+  font-weight: 100;
+  color: #787878; }
+
+.feedback-item {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 250px;
+  margin-top: 10px; }
+
+.feedback-author-name {
+  margin-top: 30px;
+  font-size: 20px;
+  margin-bottom: 7px; }
+
+.feedback-author-role {
+  font-style: italic;
+  color: #787878; }
+
+.quota img {
+  width: 30px;
+  height: 30px;
+  fill: #787878; }
+
+.feedback-content {
+  display: flex;
+  justify-content: center; }
+
+.quota-close {
+  align-self: flex-end; }
+
+.video-block {
+  min-height: 870px;
+  width: 100%;
+  background-color: #f7f7f7; }
+  .video-block .video-block-text {
+    font-family: "OpenSansThin"; }
+
+.video-container {
+  margin: 60px auto;
+  width: 1220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; }
+  .video-container h2 {
+    margin-top: 15px;
+    font-size: 35px; }
+  .video-container p {
+    text-align: center;
+    margin-top: 26px;
+    font-size: 18px;
+    line-height: 24px; }
+  .video-container iframe {
+    margin-top: 30px; }
+
+.mentors-block {
+  width: 1220px;
+  margin: 60px 15px; }
+  .mentors-block h2 {
+    margin-top: 12px;
+    text-align: center;
+    font-size: 35px; }
+
+.mentors-slider-item {
+  display: flex;
+  width: 1120px;
+  margin: 0 auto; }
+  .mentors-slider-item .mentors-text {
+    font-family: "OpenSansThin";
+    margin-top: 28px; }
+    .mentors-slider-item .mentors-text p {
+      width: 675px;
+      margin-top: 10px;
+      line-height: 25px;
+      color: #787878; }
+  .mentors-slider-item .mentor-name {
+    font-family: "OpenSansSemiBold";
+    margin-top: 38px;
+    color: #3498db;
+    font-weight: 900;
+    font-size: 20px;
+    padding-bottom: 20px;
+    border-bottom: solid 1px #f7f7f7; }
+  .mentors-slider-item img {
+    margin-left: 26px;
+    margin-right: 106px;
+    margin-top: 7px; }
+
+.map-frame {
+  margin-top: 60px; }
+
+.social-links {
+  color: #fff;
+  height: 200px;
+  width: 100%;
+  background-color: #3498db;
+  display: flex;
+  justify-content: center; }
+  .social-links a {
+    color: #fff;
+    text-decoration: none; }
+
+.social-image img {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 20px; }
+
+.social-links-container {
+  display: flex;
+  width: 1220px;
+  margin: 0 15px;
+  justify-content: space-around;
+  height: 200px;
+  align-items: center; }
+
+.social-links-item {
+  line-height: 25px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.social-title {
+  font-family: "OpenSansBold";
+  font-size: 16px; }
+
+.footer-copyright {
+  margin: 55px 0;
+  text-align: center;
+  color: #76a4e1;
+  font-size: 14px;
+  line-height: 20px; }
+  .footer-copyright a {
+    line-height: 45px;
+    color: #787878;
+    text-decoration: none;
+    font-size: 14px; }
+
+#home {
+  margin-top: -90px;
+  height: 90px; }
