--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,8 @@ header {
   top: 0;
   height: 90px;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  z-index: 1000; }
 
 .header {
   height: 90px;
@@ -92,22 +93,21 @@ header {
     font-size: 14px;
     display: flex; }
     .header .header-navigation .header-navigation-item {
-      line-height: 20px;
-      padding: 10px 20px;
-      border-radius: 50px; }
+      line-height: 20px; }
       .header .header-navigation .header-navigation-item a {
+        border-radius: 50px;
+        padding: 10px 20px;
         text-decoration: none; }
   .header img {
     width: 80px;
     height: 80px; }
 
-.header-navigation-item a {
+.main-links-item {
   color: #676767; }
 
 .active {
-  background-color: #3C6EB9; }
-  .active a {
-    color: #fff; }
+  background-color: #3C6EB9;
+  color: #fff; }
 
 .registration {
   display: flex;
@@ -139,7 +139,7 @@ header {
       line-height: 40px;
       margin-top: 30px; }
 
-.registration-form::placeholder {
+.registration-form input::placeholder {
   color: #787878; }
 
 .registration-form {
@@ -235,6 +235,9 @@ header {
   display: flex;
   width: 1220px;
   justify-content: center; }
+  .course-slider-container img {
+    margin: 0 auto;
+    margin-bottom: 21px; }
 
 .statistics {
   margin-top: 70px;
@@ -328,6 +331,7 @@ header {
 .video-container {
   margin: 60px auto;
   width: 1220px;
+  min-height: 650px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -352,9 +356,12 @@ header {
     font-size: 35px; }
 
 .mentors-slider-item {
-  display: flex;
   width: 1120px;
   margin: 0 auto; }
+  .mentors-slider-item .mentors-item-left {
+    float: left; }
+  .mentors-slider-item .mentors-item-right {
+    float: right; }
   .mentors-slider-item .mentors-text {
     font-family: "OpenSansThin";
     margin-top: 28px; }
@@ -429,3 +436,31 @@ header {
 #home {
   margin-top: -90px;
   height: 90px; }
+
+.feedbacks-slider .slick-dots {
+  position: relative;
+  top: 100px; }
+  .feedbacks-slider .slick-dots li button {
+    width: 16px;
+    height: 16px; }
+  .feedbacks-slider .slick-dots li button::before {
+    font-size: 16px; }
+
+.mentors-slider-container .slick-dots {
+  bottom: -35px; }
+  .mentors-slider-container .slick-dots li button {
+    width: 16px;
+    height: 16px; }
+  .mentors-slider-container .slick-dots li button::before {
+    font-size: 16px; }
+
+.course-slider-container .slick-dots {
+  bottom: -35px; }
+  .course-slider-container .slick-dots li button {
+    width: 16px;
+    height: 16px; }
+  .course-slider-container .slick-dots li button::before {
+    font-size: 16px; }
+
+.slick-slide {
+  outline: none; }
