--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,19 @@ footer, header, hgroup, menu, nav, section {
 
 @font-face {
   font-family: "OpenSansBold";
-  src: url(/fonts/Open_Sans/OpenSans-Bold.ttf); }
+  src: url("fonts/Open_Sans/OpenSans-Bold.ttf"); }
 
 @font-face {
   font-family: "OpenSansThin";
-  src: url(/fonts/Open_Sans/OpenSans-Light.ttf); }
+  src: url("fonts/Open_Sans/OpenSans-Light.ttf"); }
 
 @font-face {
   font-family: "OpenSansSemiBold";
-  src: url(/fonts/Open_Sans/OpenSans-SemiBold.ttf); }
+  src: url("fonts/Open_Sans/OpenSans-SemiBold.ttf"); }
 
 @font-face {
   font-family: "OpenSans";
-  src: url(/fonts/Open_Sans/OpenSans-Regular.ttf); }
+  src: url("fonts/Open_Sans/OpenSans-Regular.ttf"); }
 
 body {
   font-family: "OpenSans";
@@ -105,8 +105,14 @@ header {
 .main-links-item {
   color: #676767; }
 
+.main-links-item:hover {
+  color: #3498db; }
+
 .active {
   background-color: #3C6EB9;
+  color: #fff; }
+
+.active:hover {
   color: #fff; }
 
 .registration {
@@ -136,7 +142,7 @@ header {
     .courses .courses-text p {
       max-width: 510px;
       text-align: center;
-      line-height: 40px;
+      line-height: 35px;
       margin-top: 30px; }
 
 .registration-form input::placeholder {
@@ -152,9 +158,20 @@ header {
     height: 670px;
     font-size: 14px; }
     .registration-form form .input {
+      outline: none;
+      border: solid 1px #a7a7a7;
+      border-style: solid;
+      text-decoration: none;
+      border-radius: 5px;
+      padding-left: 10px;
       height: 50px;
       line-height: 50px;
       margin-bottom: 10px; }
+    .registration-form form .input:focus::placeholder {
+      color: transparent; }
+    .registration-form form .input:focus {
+      border-color: #9ecaed;
+      box-shadow: 0 0 10px #9ecaed; }
     .registration-form form label {
       line-height: 18px;
       font-family: "OpenSansThin";
@@ -349,7 +366,8 @@ header {
 
 .mentors-block {
   width: 1220px;
-  margin: 60px 15px; }
+  margin: 60px 15px;
+  margin-bottom: 0; }
   .mentors-block h2 {
     margin-top: 12px;
     text-align: center;
@@ -398,6 +416,7 @@ header {
     text-decoration: none; }
 
 .social-image img {
+  margin-top: 20px;
   width: 50px;
   height: 50px;
   margin-bottom: 20px; }
@@ -464,3 +483,14 @@ header {
 
 .slick-slide {
   outline: none; }
+
+.form-error {
+  border: 1px solid #ff8383;
+  box-shadow: inset 0px 0px 13px 0px rgba(228, 106, 106, 0.74);
+  color: #dc7f7f; }
+
+.form-error::placeholder {
+  color: #dc7f7f; }
+
+.form-terms-error {
+  color: #dc7f7f; }
