--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,22 +25,22 @@ footer, header, hgroup, menu, nav, section {
 
 @font-face {
 	font-family: "OpenSansBold";
-	src: url(/fonts/Open_Sans/OpenSans-Bold.ttf) ;
+	src: url('fonts/Open_Sans/OpenSans-Bold.ttf') ;
 }
 
 @font-face {
 	font-family: "OpenSansThin";
-	src: url(/fonts/Open_Sans/OpenSans-Light.ttf);
+	src: url('fonts/Open_Sans/OpenSans-Light.ttf');
 }
 
 @font-face {
 	font-family: "OpenSansSemiBold";
-	src: url(/fonts/Open_Sans/OpenSans-SemiBold.ttf);
+	src: url('fonts/Open_Sans/OpenSans-SemiBold.ttf');
 }
 
 @font-face {
 	font-family: "OpenSans";
-	src: url(/fonts/Open_Sans/OpenSans-Regular.ttf);
+	src: url('fonts/Open_Sans/OpenSans-Regular.ttf');
 }
 
 body {
@@ -124,9 +124,17 @@ header {
 	color:#676767
 }
 
+.main-links-item:hover {
+	color:#3498db;
+}
+
 .active {
 	background-color: #3C6EB9;
 	color: #fff;
+}
+
+.active:hover{
+	color:#fff;
 }
 
 
@@ -161,7 +169,7 @@ header {
 		p {
 			max-width: 510px;
 			text-align: center;
-			line-height: 40px;
+			line-height: 35px;
 			margin-top: 30px;
 		}
 		color: #787878;
@@ -182,9 +190,22 @@ header {
 		height: 670px;
 		font-size: 14px;
 		.input {
+			outline: none;
+			border: solid 1px #a7a7a7;
+			border-style: solid;
+			text-decoration: none;
+			border-radius: 5px;
+			padding-left: 10px;
 			height: 50px;
 			line-height: 50px;
 			margin-bottom: 10px;
+		}
+		.input:focus::placeholder {
+			color:transparent;
+		}
+		.input:focus {
+			border-color: #9ecaed;
+			box-shadow: 0 0 10px #9ecaed;	
 		}
 		label {
 			line-height: 18px;
@@ -426,6 +447,7 @@ header {
 .mentors-block {
 	width: $content-width;
 	margin: 60px 15px;
+	margin-bottom: 0;
 	h2 {
 		margin-top: 12px;
 		text-align: center;
@@ -488,6 +510,7 @@ header {
 }
 
 .social-image img {
+	margin-top: 20px;
 	width: 50px;
 	height: 50px;
 	margin-bottom: 20px;
@@ -585,3 +608,16 @@ header {
 	outline: none;
 }
 
+.form-error {
+    border: 1px solid #ff8383; 
+    box-shadow: inset 0px 0px 13px 0px rgba(228,106,106,0.74);
+    color: #dc7f7f;;
+}
+
+.form-error::placeholder{
+	color:#dc7f7f;
+}
+
+.form-terms-error {
+	color: #dc7f7f;
+}
