--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,10 +92,10 @@ header {
 	height: 90px;
 	display: flex;
 	justify-content: center;
-	z-index: 1000;
+	z-index: 1001;
 }
 
-.header {
+.header, .mobile-header {
 	height: 90px;
 	width: $content-width;
 	display: flex;
@@ -150,7 +150,8 @@ header {
 	display: flex;
 	margin: 0 auto;
 	margin-top: 40px;
-	height: 630px;
+	min-height: 630px;
+	overflow: hidden;
 	justify-content: space-between;
 }
 
@@ -620,4 +621,137 @@ header {
 
 .form-terms-error {
 	color: #dc7f7f;
+}
+
+.mobile-header {
+	display: none;
+	.menu__box {
+		box-shadow: none;
+		display: block;
+		position: fixed;
+		visibility: hidden;
+		top: -100%;
+		left: 0;
+	  
+		width: 100%;
+		height: 250px;
+	  
+		margin: 0;
+		padding: 10px 0;
+	  
+		list-style: none;
+	  
+		background-color: #fff;
+		box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+	  
+		transition-duration: .25s;
+	  }
+	#menu__toggle {
+		opacity: 0;
+	  }
+	  
+	//   #menu__toggle:checked ~ .menu__btn > span {
+	// 	transform: rotate(45deg);
+	//   }
+	//   #menu__toggle:checked ~ .menu__btn > span::before {
+	// 	top: 0;
+	// 	transform: rotate(0);
+	//   }
+	//   #menu__toggle:checked ~ .menu__btn > span::after {
+	// 	top: 0;
+	// 	transform: rotate(90deg);
+	//   }
+	  #menu__toggle:checked ~ .menu__box {
+		visibility: visible;
+		top: 90px;
+	  }
+	  
+	  .menu__btn {
+		display: flex;
+		align-items: center;
+		margin:  0;
+		width: 26px;
+		height: 26px;
+	  
+		cursor: pointer;
+		z-index: 1;
+	  }
+	  
+	  .menu__btn > span,
+	  .menu__btn > span::before,
+	  .menu__btn > span::after {
+		display: block;
+		position: absolute;
+		width: 26px;
+		height: 2px;
+		
+		background-color: #fff;
+	  
+		transition-duration: .25s;
+	  }
+	  .menu__btn > span::before {
+		content: '';
+		top: -8px;
+	  }
+	  .menu__btn > span::after {
+		content: '';
+		top: 8px;
+	  }
+	  label {
+		  background-color: #3C6EB9;
+		  padding: 5px 10px;
+		  border-radius: 5px;
+	  }
+}
+
+@media screen and (max-width:1219px){
+	.header {
+		display: none;
+	}
+	.mobile-header {
+		width: calc(100% - 60px);
+		margin: 0;
+		display: flex;
+		z-index: 1000;
+		ul {
+			flex-direction: column;
+			align-items: center;
+			li {
+				padding: 10px;
+			}
+		}
+	}
+	.registration {
+		min-height: 1150px;
+	}
+	.registration-container {
+		width: calc(100% - 30px);
+		margin: 0 auto;
+		flex-direction: column;
+		align-items: center;
+		.courses {
+			width: 100%;
+			.courses-title, .courses-text {
+				width: 100%;
+			}
+			text-align: center;
+			p {
+				margin: 20px auto;
+			}
+		}
+		.registration-form {
+			max-width: 630px;
+			width: calc(100% - 30px);
+			margin: 0 auto;
+			flex-direction: column;
+			align-items: center;
+			form {
+				width: 100%;
+			}
+			.input {
+				width: 100%;
+			}
+		}
+	}
+	
 }
